--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,11 @@
   width: 100%;
   height: 100%;
   background-color: #343434;
+  --primary: #e0c068;
+  --primary-button: #dda853;
+  --primary-black: #343434;
 }
+
 
 body, html {
   margin: 0;
