chore: update config vite, make error page

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   background-color: #343434;
   --primary: #e0c068;
   --primary-button: #dda853;
-  --primary-black: #343434;
+  --primaryblack: #343434;
 }
 
 
