--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import "tailwindcss";
 
 :root {
-  font-family: 'JetBrains Mono', monospace;
+  font-family: 'Inter', monospace;
   display: flex;
   justify-content: center;
   align-items: center;
