--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,111 @@
 
 }
 
+@font-face {
+  font-family: 'Equila';
+  src: url('../src/assets/fonts/equila/Equila.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Equila';
+  src: url('../src/assets/fonts/equila/Equila.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Levaus';
+  src: url('../src/assets/fonts/levaus/Levaus.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Levaus';
+  src: url('../src/assets/fonts/levaus/Levaus.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Normal Equila font class */
+.equila-normal {
+  font-family: 'Equila', sans-serif;
+  font-weight: 400;
+}
+
+/* Bold Equila font class */
+.equila-bold {
+  font-family: 'Equila', sans-serif;
+  font-weight: 700;
+}
+
+/* Normal Equila font class */
+.levaus-normal {
+  font-family: 'Levaus', sans-serif;
+  font-weight: 400;
+}
+
+/* Bold Equila font class */
+.levaus-bold {
+  font-family: 'Levaus', sans-serif;
+  font-weight: 700;
+}
+
+/* Fix responsive issues */
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+/* Ensure container behaves properly */
+.container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
 :root {
   font-family: 'Inter', monospace;
   display: flex;
